# demo-cicd

./: Cargo.toml  Dockerfile.full  Dockerfile.prebuild
.demo/: demo.json  slide1.md
.github/: dependabot.yml
.github/workflows/: 1-basic.yml  2-add-docker.yml  2-parallel.yml  3-add-docker.yml  3-parallel-cache.yml  4-integration-test.yml  5-integration-test-prebuild.yml  6-docker.yml  7-docker-prebuild.yml  8-dependabot.yml  99-add-docker.yml
src/: main.rs
tests/: hello.hurl  jens.hurl
