[package]
name = "demo-cicd"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# axum-server-timing = "2"
# chrono = { version = "0.4", features = ["serde"] }
# rust_decimal = { version = "1", features = ["db-tokio-postgres"] }
# rustls = { version = "0.23" }
# sqlx = { version = "0.8", features = [
#     "runtime-tokio-rustls",
#     "postgres",
#     "uuid",
#     "json",
#     "chrono",
#     "rust_decimal",
# ] }
# swagger-ui-dist = { version = "5.20" }
# reqwest = { version = "0.12" }
# tower-http = { version = "0.6", features = ["cors", "trace"] }
# tracing = { version = "0.1", features = ["log"] }
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# uuid = { version = "1", features = ["v4"] }